<resources>
    <string name="app_name">MenuJo</string>

    <!--  common : any Activity  -->
    <string name="common_name">닉네임</string>
    <string name="common_id">아이디</string>
    <string name="common_pwd">비밀번호</string>
    <string name="common_set_id">아이디를 입력해주세요</string>
    <string name="common_set_pwd">비밀번호를 입력해주세요</string>
    <string name="common_signin">로그인</string>
    <string name="common_signup">회원가입</string>
    <string name="common_finish">&#160;완료</string>

    <!--  MainPageActivity  -->
    <string name="main_koreanfood">한식</string>
    <string name="main_chinesefood">중식</string>
    <string name="main_westernfood">양식</string>
    <string name="main_japanesefood">일식</string>

    <string name="main_catagory">카테고리 선택</string>
    <string name="main_sir">%s 님</string>

    <string name="main_snackbar_not_full">혹시 지금 배가 안 고프시다면</string>
    <string name="main_snackbar_not_curious">저희에 대해서 궁금하지 않으시다면</string>
    <string name="main_snackbar_dawn">지금이 새벽이시면</string>
    <string name="main_snackbar_diet">다이어트 중이시면</string>
    <string name="main_snackbar_just_quit">그냥 종료하고 싶으시면</string>
    <string name="main_snackbar_finish">종료하세요~~</string>

    <string name="main_click">눌러보삼</string>


    <!--  DetailPageActivity  -->
    <string name="detail_menu_list_title"> %s 리스트</string>
    <string name="detail_menu_recommend">오늘의 추천 메뉴</string>
    <string name="detail_menu_name">메뉴 이름</string>
    <string name="detail_menu_introduce">메뉴 소개</string>
    <string name="detail_menu_another">다른 메뉴들도 살펴보세요!</string>
    <string name="iv_description_recommend_food_image">오늘의 추천 메뉴 이미지</string>
    <string name="iv_description_other_food_image">추천 메뉴 제외 다른 메뉴 이미지</string>
    <string name="tv_menu_bibimbap">비빔밥</string>
    <string name="tv_menu_intro_bibimbap">쌀밥에 고기나 나물 등과 여러 가지 양념을 넣어 비벼 먹는 음식</string>
    <string name="tv_menu_soft_tofu_stew">순두부찌개</string>
    <string name="tv_menu_intro_soft_tofu_stew">순두부를 넣고 양념하여 끓인 찌개</string>
    <string name="tv_menu_bulgogi">불고기</string>
    <string name="tv_menu_intro_bulgogi">여러 동물의 고기를 얇게 썰어 양념으로 재운 뒤 불에 구운 음식</string>
    <string name="tv_menu_japchae">잡채</string>
    <string name="tv_menu_intro_japchae">여러가지 야채들을 기름으로 볶은 뒤 삶은 당면을 간장양념으로 같이 볶은 음식</string>
    <string name="tv_menu_seafood_pancake">해물파전</string>
    <string name="tv_menu_intro_eafood_pancake">해산물을 부쳐서 만든 부드러운 전</string>
    <string name="tv_menu_jajangmyeon">짜장면</string>
    <string name="tv_menu_intro_jajangmyeon">볶은 춘장과 야채, 고기 등의 재료를 다시 식용유에 볶아 면에 비벼 먹는 음식</string>
    <string name="tv_menu_jjambbong">짬뽕</string>
    <string name="tv_menu_intro_jjambbong">채소와 해산물, 육류 등을 볶아 육수로 끓여낸 얼큰한 국물에 면을 넣어 만든 음식</string>
    <string name="tv_menu_egg_fried_rice">계란 볶음밥</string>
    <string name="tv_menu_intro_egg_fried_rice">밥을 다른 재료와 함께 넣고 기름에 볶아 만든 음식</string>
    <string name="tv_menu_sweet_and_sour_pork">탕수육</string>
    <string name="tv_menu_intro_sweet_and_sour_pork">돼지고기에 녹말 반죽을 묻혀서 기름에 튀긴 후, 소스와 함께 먹는 음식</string>
    <string name="tv_menu_mapo_tofu">마파두부</string>
    <string name="tv_menu_intro_mapo_tofu">두부를 주재료로, 두반장을 기본 양념으로 하여 만든 음식</string>
    <string name="tv_menu_hamburger">햄버거</string>
    <string name="tv_menu_intro_hamburger">패티를 구운 후 다양한 부재료와 함께 빵 사이에 끼워 먹는 음식</string>
    <string name="tv_menu_pizza">피자</string>
    <string name="tv_menu_intro_pizza">밀가루로 반죽에 토마토 소스와 치즈 등의 토핑을 얹어서 구워내는 음식</string>
    <string name="tv_menu_pasta">파스타</string>
    <string name="tv_menu_intro_pasta">밀가루로 만든 면을 사용해, 다양한 소스와 함께 조리되는 음식</string>
    <string name="tv_menu_steak">스테이크</string>
    <string name="tv_menu_intro_steak">고기 조각을 굽거나 튀긴 음식</string>
    <string name="tv_menu_sandwich">샌드위치</string>
    <string name="tv_menu_intro_sandwich">식빵 두 장 사이에 재료를 넣어 먹는 음식</string>
    <string name="tv_menu_sushi">초밥</string>
    <string name="tv_menu_intro_sushi">식재료를 배합초에 절인 쌀밥 위에 올려 만드는 음식</string>
    <string name="tv_menu_udon">우동</string>
    <string name="tv_menu_intro_udon">밀가루로 만든 굵은 면발을 사용하여 만든 국수</string>
    <string name="tv_menu_ramen">라멘</string>
    <string name="tv_menu_intro_ramen">면과 국물로 구성되며, 다양한 재료와 함께 즐겨 먹는 음식</string>
    <string name="tv_menu_takoyaki">타코야끼</string>
    <string name="tv_menu_intro_takoyaki">밀가루 반죽에 잘게 썬 문어 등을 넣어 동그랗게 구워내 가쓰오부시와 소스를 뿌려 먹는 음식</string>
    <string name="tv_menu_tonkatsu">돈카츠</string>
    <string name="tv_menu_intro_tonkatsu">돼지고기를 저민 뒤 튀김옷을 입혀 튀기는 일본식 음식</string>

    <!--  SignInActivity  -->

    <string name="toast_signin_non_user">회원정보를 찾을 수 없습니다</string>

    <!--  SignUpActivity  -->
    <string name="et_signup_name">영어로만 2자리 이상 입력해주세요</string>
    <string name="et_signup_id">영어+숫자 7자리 이상 입력해주세요</string>
    <string name="et_signup_pwd">숫자로만 7자리 이상 입력해주세요</string>

    <string name="et_signup_name_pattern">영어만 입력해주세요</string>
    <string name="et_signup_id_pattern">영어와 숫자만 입력해주세요</string>
    <string name="et_signup_pwd_pattern">숫자만 입력해주세요</string>

    <string name="tv_signup_favorite_title">선호 음식</string>
    <string name="tv_signup_favorite_sub">3개까지 선택 가능</string>
    <string name="toast_signup_favorite_min1">선호하는 음식을 1개 이상 선택해주세요</string>
    <string name="toast_signup_favorite_max3">최대 3개까지 선택 가능합니다</string>

    <string name="cb_meat">고기</string>
    <string name="cb_seafood">해산물</string>
    <string name="cb_rice">밥</string>
    <string name="cb_noodle">면</string>
    <string name="cb_bread">빵</string>
    <string name="cb_vegetable">야채</string>
    <string name="cb_spicy">매운맛</string>
    <string name="cb_normal">중간맛</string>
    <string name="cb_mild">순한맛</string>

    <string name="btn_signup_signin">돌아가기</string>
    <string name="toast_signup_name">닉네임을 입력해주세요</string>

    <!--  MyPageActivity  -->
    <string name="iv_description_user_profile">유저 프로필 이미지</string>
    <string name="btn_label_to_home">홈으로</string>
    <string name="iv_description_bottom_logo">하단 로고 이미지</string>
    <string name="toast_sign_in_first">먼저 로그인을 해주세요</string>
    <string name="tv_my_page_favorite_title">선호 음식</string>
    <string name="text_label_my_history">내 히스토리</string>
    <string name="iv_description_delete">삭제 아이콘 이미지</string>

</resources>